--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-openai
-backoff
-jsonlines
-sympy
-wandb
-func_timeout
-numpy
-transformers
-einops
+openai == 0.27.7
+backoff == 2.2.1
+jsonlines == 4.0.0
+sympy == 1.12
+wandb == 0.16.1
+func_timeout == 4.3.5
+numpy == 1.24.3
+transformers == 4.36.2
+einops == 0.7.0
