--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,19 @@ numpy == 1.24.3
 transformers == 4.36.2
 einops == 0.7.0
 accelerate == 0.26.1
+
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+frozenlist==1.3.3
+idna==3.4
+mpmath==1.3.0
+multidict==6.0.4
+requests==2.31.0
+tqdm==4.65.0
+urllib3==2.0.2
+yarl==1.9.2
+pandas==2.0.3
